feat(common): Consist styling